--- a/src/Pages/Introduction/Introduction.css
+++ b/src/Pages/Introduction/Introduction.css
@@ -98,7 +98,7 @@
         width: 17rem;
     }
     .intro-inside-box {
-        padding: 2.5rem 0 2rem 0;
+        padding: 2rem 0 2rem 0;
     }
     #title-name {
         font-size: 2rem;
