--- a/src/root.css
+++ b/src/root.css
@@ -27,6 +27,7 @@ main {
   position: relative;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .page-wrapper {
